--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@500;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -52,7 +54,6 @@
     box-sizing: border-box;
 }
 .hero .title {
-    font-family: Plus Jakarta Display;
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 4px;
