--- a/style.css
+++ b/style.css
@@ -70,14 +70,12 @@
 }
 
 .cta {
-    /* background-color: red; */
     display: flex;
     margin: 16px 0;
 }
 .cta a {
-    /* background-color: white; */
-    background-color: #F0996C;
-    width: 240px;
+    background-color: #F3793B;
+    width: 180px;
     height: 60px;
     margin-right: 12px;
     display: flex;
@@ -85,13 +83,16 @@
     align-items: center;
     text-decoration: none;
     color: white;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    box-shadow: 5px 5px 70px 8px rgba(0,0,0,0.66);
+    -webkit-box-shadow: 5px 5px 70px 8px rgba(0,0,0,0.66);
+    -moz-box-shadow: 5px 5px 70px 8px rgba(0,0,0,0.66);
 }
 .cta a .cta-button {
-    border: 2px solid white;
-    border-radius: 8px;
-    padding: 12px 10px;
+    width: 100%;
+    padding: 12px 16px;
     box-sizing: border-box;
-    /* background-color: brown; */
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -100,7 +101,6 @@
 }
 .cta a .cta-button .icon {
     margin-right: 12px;
-    /* background-color: cyan; */
     display: flex;
     
 }
