--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: "Urbanist", sans-serif;
 }
 
+body {
+    max-width: 600px;
+}
+
 .container {
     display: none;
     width: 100%;
@@ -54,7 +58,7 @@
     box-sizing: border-box;
 }
 .hero .title {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 600;
     margin-bottom: 4px;
     color: #F0996C;
@@ -68,14 +72,17 @@
     font-size: 18px;
     font-weight: 500;
 }
-
+.scrollable {
+    overflow: scroll;
+}
 .cta {
     display: flex;
     margin: 16px 0;
+    width: 400px;
 }
 .cta a {
     background-color: #F3793B;
-    width: 180px;
+    width: 200px;
     height: 60px;
     margin-right: 12px;
     display: flex;
@@ -85,9 +92,9 @@
     color: white;
     border-radius: 8px;
     margin-bottom: 10px;
-    box-shadow: 5px 5px 70px 8px rgba(0,0,0,0.66);
-    -webkit-box-shadow: 5px 5px 70px 8px rgba(0,0,0,0.66);
-    -moz-box-shadow: 5px 5px 70px 8px rgba(0,0,0,0.66);
+    box-shadow: 5px 5px 7px 2px rgba(0,0,0,0.66);
+    -webkit-box-shadow: 5px 5px 7px 2px rgba(0,0,0,0.66);
+    -moz-box-shadow: 5px 5px 7px 2px rgba(0,0,0,0.66);
 }
 .cta a .cta-button {
     width: 100%;
